# earthcmap

./: color_picker.html  pyproject.toml
earthcmap/: __init__.py  loader.py
earthcmap/cmaps/: atmosphere.json  classic.json  earthobs.json  ocean.json  precipitation.json
examples/: esmpas_continuous.py  esmpas_discrete.py  esmpas_names.py  esmpas_plot_all.py
joss/: paper.bib  paper.md
src/earthcmap/: __init__.py  loader.py
src/earthcmap/cmaps/: atmosphere.json  indices.json  land.json  ocean.json  precipitation.json  temperature.json
