[project]
name = "earthcmap"
version = "0.1.0"
description = "EARTHCMAP: Earth Science data Colormaps"
authors = [{name = "Jorge Humberto Bravo Mendez", email = "jbravo2@stevens.edu"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
]
