[project]
name = "earthcmap"
version = "0.1.0"
description = "EARTHCMAP: Earth Science data Colormaps"
authors = [{name = "Jorge Humberto Bravo Mendez", email = "jbravo2@stevens.edu"}]
readme = "README.md"
license = "MIT AND (Apache-2.0 OR BSD-2-Clause)"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.6",
]

[project.scripts]
earthcmap = "earthcmap:loader"

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"

[tool.ruff.per-file-ignores]
# Ignore `F401` (import violations) in all `__init__.py` files, and in `docs/*.py`.
"__init__.py" = ["F401"]
"joss/*" = ["F401"]
"examples/*.py" = ["E402"]
